--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
